# rusnapshot

./: Cargo.toml  LICENSE  README.md  builder.sh
docs/: SETUP.md  SETUP_AND_USAGE.md
examples/: config.toml
examples/config-templates/: config-all.toml  config-home.toml  config-root.toml
examples/services/: rusnapshot-daily.service  rusnapshot-daily.timer  rusnapshot-monthly.service  rusnapshot-monthly.timer  rusnapshot-three-hours.service  rusnapshot-three-hours.timer  rusnapshot-weekly.service  rusnapshot-weekly.timer
src/: args.rs  cli.yml  controller.rs  database.rs  lib.rs  main.rs  operations.rs  structs.rs  utils.rs
