[package]
name = "rusnapshot"
version = "0.4.1"
authors = ["edu4rdshl"]
edition = "2018"
description = "Simple and handy btrfs snapshoting tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlite = "0.37.0"
md5 = "0.7.0"
chrono = "0.4.41"
prettytable-rs = "0.10.0"
anyhow = "1.0.98"
toml = "0.8.22"
hostname = "0.4.1"


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
opt-level = "s"
